# CS2-Tactical-Analytics

./: .env.example  .gitignore  LICENSE  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/analytics/: aggregate.py  maps.py  routes.py
backend/app/assets/callouts/: de_ancient.json  de_anubis.json  de_cache.json  de_dust2.json  de_inferno.json  de_mirage.json  de_nuke.json  de_train.json  de_vertigo.json
backend/app/auth/: deps.py  routes.py  security.py
backend/app/demos/: reparse.py  routes.py  service.py
backend/app/domain/: enums.py  models.py  schemas.py  weapons.py
backend/app/groups/: routes.py  service.py
backend/app/hltv/: backfill.py  client.py  jobs.py  routes.py
backend/app/ml/: dataset.py  deepsets.py  features.py  model.py  routes.py  service.py
backend/app/parsing/: parser.py  replay.py  runner.py
backend/scripts/: compare_pooling.py  import_callouts.py  recalibrate_callouts.py  regen_vox_bomb.py
backend/tests/: conftest.py  test_analytics.py  test_auth_groups.py  test_demos_maps.py  test_hltv.py  test_ml.py  test_parser_matchup.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  router.tsx
frontend/src/components/: LanguageSwitcher.tsx  Layout.tsx  MultiSelect.tsx  NavBar.tsx  (+4 more)
(+45 files in other folders)
