[project]
name = "cs2-tactical-analytics"
version = "0.1.0"
description = "CS2 tactical analytics - auth, demo ingestion (upload + HLTV), maps"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.12", # file uploads
    "bcrypt>=4.1", # password hashing
    "pyjwt>=2.9", # JWT auth
    "email-validator>=2.2", # pydantic EmailStr
    "curl-cffi>=0.7", # HLTV team search (clears /search)
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "rarfile>=4.2", # HLTV GOTV archives are .rar
    "awpy>=2.0", # CS2 .dem parsing
    "pandas>=2.2",
    "pyarrow>=18.0",
    "psycopg[binary]>=3.2", # PostgreSQL driver (SQLAlchemy postgresql+psycopg)
]

[dependency-groups]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.7"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# FastAPI's dependency-injection idiom puts Depends()/Query()/File() in defaults.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
